k8s-examples/namespace.yaml
# Defining the default namespace
apiVersion: v1
kind: Namespace
metadata:
  name: development
