k8s-examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aegis-backend-svc
  namespace: development
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
